Working version
---------------

### Language features:


### Runtime system:


### Code generation and optimizations:

- #9441: Add RISC-V RV64G native-code backend.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

### Standard library:


### Other libraries:


### Tools:


### Manual and documentation:


### Compiler user-interface and warnings:


### Internal/compiler-libs changes:


### Build system:


### Bug fixes:


OCaml 4.11
----------

(Changes that can break existing programs are marked with a "*")

### Language features

- #8820, #9166: quoted extensions: {%foo|...|} is lighter syntax for
  [%foo {||}], and {%foo bar|...|bar} for [%foo {bar|...|bar}].
  (Gabriel Radanne, Leo White, Gabriel Scherer and Pieter Goetschalckx,
   request by Bikal Lem)

- #6673, #1132: Relax the handling of explicit polymorphic types
  (Leo White, review by Jacques Garrigue and Gabriel Scherer)

- #9232: allow any class type paths in #-types,
  For instance, "val f: #F(X).t -> unit" is now allowed.
  (Florian Angeletti, review by Gabriel Scherer, suggestion by Leo White)

- MPR#7364, GPR#2188: improvement of the unboxability check for types
  with a single constructor. Mutually-recursive type declarations can
  now contain unboxed types. This is based on the paper
    https://arxiv.org/abs/1811.02300
  (Gabriel Scherer and Rodolphe Lepigre,
   review by Jeremy Yallop, Damien Doligez and Frédéric Bour)

- #1154, #1706: spellchecker hints and type-directed disambiguation
  for extensible sum type constructors
  (Florian Angeletti, review by Alain Frisch, Gabriel Radanne, Gabriel Scherer
  and Leo White)

### Runtime system:

- #9119: Make [caml_stat_resize_noexc] compatible with the [realloc]
  API when the old block is NULL.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8920, #9238, #9239, #9254: New API for statistical memory profiling in
  Memprof.Gc. The new version does no longer use ephemerons and allows